# rogue-light

./: CMakeLists.txt  LICENCE  README.md  build.sh  main.cpp  manual_test.sh  test.sh
src/: main.cpp
tests/: test_player_move.cpp
